# transaction-detector

./: .env  .gitignore  Bank_of_Ajman_Fraud_Detection_Integration_Plan.md  New_Components_Documentation.md  QA_BUG_REPORT.md  README.md  Security_Fixes_Completed.md  Security_Fixes_Summary.md  Security_Tasks_Checklist.md  api.py  app.py  postman_collection.json  pyproject.toml  requirements.txt  requirements_api.txt  transaction_history.csv
attached_assets/: Clean_DB.csv
backend/: __init__.py  autoencoder.py  db_service.py  feature_engineering.py  file_operations.py  hybrid_decision.py  input_validator.py  isolation_forest.py  rule_engine.py  train_autoencoder.py  train_isolation_forest.py  utils.py  velocity_service.py
backend/model/: autoencoder.h5  autoencoder_scaler.pkl  autoencoder_threshold.json  isolation_forest.pkl  isolation_forest_scaler.pkl
data/: Clean.csv  engineered_transaction_features.csv  feature_Engineered.csv  feature_datasetv2.csv  feature_datasetv2_1.csv  feature_datasetv2_2.csv  feature_engineered_data.csv  transaction_history.csv  user_stats.json  velocity_counters.json
docs/: API_Documentation.md  API_Logic.md  Autoencoder_Implementation.md  BRD.md  Bank_of_Ajman_Fraud_Detection_Integration_Plan.md  Current_Business_Status.md  DB integration Steps.md  Detailed_System_DataFlow.md  Feature_Dataset_Documentation.md  Isolation_Forest_Implementation.md  Model_Training_Process.md  PROJECT_LOGIC.md  Project_DataFlow.md  Project_Decision_Reasoning_Complete.md  Project_Overview_Complete.md  README.md  projectarchitecture.md
