[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "tensorflow>=2.15.0",
    "joblib>=1.3.0",
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
]
